[gd_scene load_steps=28 format=3 uid="uid://bgp70vmwf436p"]

[ext_resource type="Script" path="res://scenes/bally.gd" id="1_v7tuq"]
[ext_resource type="PackedScene" uid="uid://cb85iplslcuom" path="res://scenes/cheese.tscn" id="2_hgctj"]
[ext_resource type="Texture2D" uid="uid://corj5dtbn0c5o" path="res://assets/textures/Cyberpunk_protas/3 Hands/2 Punk/3.png" id="3_ga5dr"]
[ext_resource type="PackedScene" uid="uid://bfboxfqnwlapo" path="res://scenes/ui/GAMEOVER/game_over.tscn" id="3_y667j"]
[ext_resource type="Texture2D" uid="uid://bjrxagomdq4u8" path="res://assets/textures/Cyberpunk_protas/2 Guns/1_1.png" id="4_d0fll"]
[ext_resource type="Texture2D" uid="uid://l0pjtvpydu10" path="res://assets/textures/Cyberpunk_protas/1 Characters/2 Punk/Idle1.png" id="5_1o8q8"]
[ext_resource type="PackedScene" uid="uid://bfax0quivj8v" path="res://scenes/ui/pausa.tscn" id="5_7isvo"]
[ext_resource type="Texture2D" uid="uid://d2rqjwudqnu1d" path="res://assets/textures/Cyberpunk_protas/1 Characters/2 Punk/Run1.png" id="6_e3ffy"]
[ext_resource type="Texture2D" uid="uid://stvn8nkebhjb" path="res://assets/textures/Cyberpunk_protas_v2/2 Punk/Punk_death.png" id="8_npu0v"]
[ext_resource type="Texture2D" uid="uid://dwdx0orbdm6i3" path="res://assets/textures/Cyberpunk_protas_v2/2 Punk/Punk_hurt.png" id="9_oqv6e"]
[ext_resource type="Texture2D" uid="uid://cve3hfo6ad4a5" path="res://assets/textures/Hearts/Red/Heart_red.png" id="11_uhgs7"]
[ext_resource type="Texture2D" uid="uid://px3oserdk2ok" path="res://assets/textures/Hearts/all_swords.png" id="11_wqyxf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqigi"]
size = Vector2(12, 18.5)

[sub_resource type="Animation" id="Animation_68akx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Prota:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_e3ffy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Prota:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Prota:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Prota:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Brazo:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ga5dr")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/11:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_d0fll")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wqjwo"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Brazo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/11:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Prota:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_npu0v")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Prota:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Prota:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pivot/Prota:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_etwt7"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Brazo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/11:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Prota:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_oqv6e")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Prota:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Prota:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/Prota:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_x0w0n"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Prota:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_1o8q8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Prota:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Prota:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Brazo:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ga5dr")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/11:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_d0fll")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pivot/Prota:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_oklx0"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Prota:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_e3ffy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Prota:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Prota:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Prota:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Brazo:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ga5dr")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/11:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_d0fll")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgqc1"]
_data = {
"RESET": SubResource("Animation_68akx"),
"death": SubResource("Animation_wqjwo"),
"hurt": SubResource("Animation_etwt7"),
"idle": SubResource("Animation_x0w0n"),
"run": SubResource("Animation_oklx0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mavr5"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u474r"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htywg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mo03y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4wd32"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o3mih"]
states/idle/node = SubResource("AnimationNodeAnimation_mavr5")
states/idle/position = Vector2(400, 100)
states/run/node = SubResource("AnimationNodeAnimation_u474r")
states/run/position = Vector2(552, 91.6141)
transitions = ["idle", "run", SubResource("AnimationNodeStateMachineTransition_htywg"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_mo03y"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_4wd32")]
graph_offset = Vector2(17, -22.3859)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amvgc"]
bg_color = Color(0.298039, 0.686275, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h8u0"]
bg_color = Color(1, 0.341176, 0.133333, 1)

[node name="Bally" type="CharacterBody2D"]
position = Vector2(37, 71)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_v7tuq")
cheese_scene = ExtResource("2_hgctj")
gameOver_scene = ExtResource("3_y667j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.9)
shape = SubResource("RectangleShape2D_wqigi")

[node name="Pivot" type="Node2D" parent="."]

[node name="Brazo" type="Sprite2D" parent="Pivot"]
position = Vector2(2, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ga5dr")

[node name="11" type="Sprite2D" parent="Pivot"]
position = Vector2(7, -3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_d0fll")

[node name="Prota" type="Sprite2D" parent="Pivot"]
position = Vector2(5, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_e3ffy")
hframes = 6

[node name="CheeseSpawn" type="Marker2D" parent="Pivot"]
position = Vector2(8.5, -3.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vgqc1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_o3mih")
anim_player = NodePath("../AnimationPlayer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_7isvo")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -57.5
offset_right = 56.0
offset_bottom = 57.5

[node name="GUI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -142.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/GUI"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.298039, 0.686275, 0.313726, 1)
theme_override_colors/font_outline_color = Color(0.298039, 0.686275, 0.313726, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_amvgc")
value = 100.0

[node name="HeartRed" type="Sprite2D" parent="CanvasLayer/GUI"]
position = Vector2(8, 14)
scale = Vector2(0.03, 0.03)
texture = ExtResource("11_uhgs7")
hframes = 3
vframes = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 12.0
offset_right = 107.0
offset_bottom = 36.0

[node name="DamageBar" type="ProgressBar" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_5h8u0")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="AllSwords" type="Sprite2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(8, 7.45)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_wqyxf")
hframes = 10
vframes = 5

[node name="AllSwords2" type="Sprite2D" parent="CanvasLayer/MarginContainer"]
position = Vector2(7, 7.45)
scale = Vector2(-0.2, 0.2)
texture = ExtResource("11_wqyxf")
hframes = 10
vframes = 5

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="fire"]
